crates/lutum/tests/ui/hook_def_mismatched_field_name.rs
#[lutum::hooks]
trait ShellHooks {
    #[hook(fallback)]
    async fn validate_command(cmd: &str) -> Result<(), &'static str>;
}

fn main() {}
